shift navigation to view to prevent overlap

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #1A1A1A;
   user-select: none;
 }
