--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  background-color: #1A1A1A;
+}
+
 body {
   overflow-x: hidden;
   margin: 0;
