--- a/src/views/Welcome.module.scss
+++ b/src/views/Welcome.module.scss
@@ -25,7 +25,7 @@
 
 .fullContainer {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
